<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:id="@+id/wolfram_input"
            android:labelFor="@id/wolfram_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/wolfram_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/wolframOrange"
            app:srcCompat="@drawable/wolfram_icon"/>

    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/wolfram_pod_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>