<resources>
    <string name="app_name">AndroidUnitTests</string>
    <string name="not_implemented">Not yet implemented</string>

    <string name="decimal_symbol">.</string>
    <string name="left_paren">(</string>
    <string name="right_paren">)</string>
    <string name="function_arg_separator">,</string>
    <string name="equals_symbol">=</string>

    <string name="add_op">+</string>
    <string name="substract_op">-</string>
    <string name="multiply_op">*</string>
    <string name="divide_op">/</string>
    <string name="exponent_op">^</string>
    <string name="exponent_op_value">^</string>

    <string name="invalid_expression">Invalid Expression</string>

    <string name="divide_pi_label">÷ π</string>

    <string name="wolfram_alpha">Wolfram Alpha</string>
    <string name="wolfram_abbrev">Wolf.</string>
    <string name="wolfram_failure">Wolfram failed to run the query.</string>
</resources>
