<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/display"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/displayBackgroundColor"
    android:clipToPadding="false"
    app:elevation="6dp">

    <com.mobiquity.androidunittests.ui.view.CalculatorEditText
        android:id="@+id/display_input"
        style="@style/DisplayEditTextStyle.Formula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textNoSuggestions"
        app:minTextSize="48sp"/>

    <TextView
        android:id="@+id/display_result"
        style="@style/DisplayEditTextStyle.Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_input"
        android:inputType="none"
        android:focusable="false"/>

</RelativeLayout>