...
        android:id="@+id/extra_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/extra_button_wolfram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PadButtonStyle"
            android:drawableBottom="@drawable/wolfram_icon"
            android:gravity="center_horizontal|top"
            android:text="@string/wolfram_abbrev"/>
...
            android:gravity="center_horizontal|top"
            android:text="@string/divide_pi_label"/>

    </GridLayout>

    <LinearLayout
        android:id="@+id/handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
...
